--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-# 忽略.idea ; __pycache__文件夹
+# 忽略.idea ; __pycache__; dist; build文件夹
 /.idea/
 /__pycache__/
+/dist/
+/build/
 
-# 忽略所有.xlsx文件
+# 忽略所有.xlsx; .spec文件
 *.xlsx
+*.spec
